--- a/etc/FAQ
+++ b/etc/FAQ
@@ -1,3 +1,8 @@
+============================
+ Frequently Asked Questions
+============================
+
+
 Q. Why choose a modified BSD License?
 
 A. I have chosen to distribute iCal4j under a modified BSD license for the following reasons:
