--- a/AUTHORS
+++ b/AUTHORS
@@ -6,7 +6,8 @@
  
   - Heladito, Darkwave, twinkle, Outmyth, Ralph Schaer, Chris Borrill,
   Meher Tendjoukian, John Casey, Harrie Hazewinkel, Markus Rahlff,
-  Marcus Hauer, Dustin (calibre), Tobias Lidskog, Bruce Atherton..
+  Marcus Hauer, Dustin (calibre), Tobias Lidskog, Bruce Atherton,
+  Mike Douglass, ...
  
  
  Thanks also to the developers of the following applications/libraries:
