Clover code coverage license

--- a/AUTHORS
+++ b/AUTHORS
@@ -27,3 +27,5 @@
   - Base64 [http://iharder.sourceforge.net/base64/]
   
   - Vzic [http://dspace.dial.pipex.com/prod/dialspace/town/pipexdsl/s/asbm26/vzic/]
+  
+  - Cenqua [http://cenqua.com] for Clover and the Open Source license
