Added beta4 release notes

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,13 @@
  iCal4j - Changes
 ==================
 
+1.0-beta4
+
+ - Added support for VVENUE
+ 
+ - Bug fixes
+ 
+ 
 1.0-beta3
 
  - Third beta release.
