Added link to release notes

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,9 +2,9 @@
  iCal4j - Changes
 ==================
 
- See the changelog report for further details:
+ See the release notes for further details:
 
- 	http://m2.modularity.net.au/projects/ical4j/changelog.html
+   http://ical4j.github.io/docs/ical4j/release-notes
 
 ==
 
